Fixed: some tools is interrupted by recorder.

Related threads:
[bug#477715](https://bugs.kde.org/show_bug.cgi?id=477715)
[bug#484783](https://bugs.kde.org/show_bug.cgi?id=484783)

According to my tests, half of tools are affected.

This MR expanded tool blacklist and divide tools into two categories.

One is done in one step(like Line Tool), just disable recorder when such tools are activated(left button pressed on canvas).

One is done in multiple steps(like FreeHand Selection Tool), we need disable recorder in such tools all lifetime.

BUG:488472
BUG:477715
BUG:484783