plugins/dockers/recorder/recorder_writer.cpp
@@ -10,7 +10,7 @@
 #include <kis_canvas2.h>
 #include <kis_image.h>
 #include <KisDocument.h>
-#include <KoToolProxy.h>
+#include "kis_tool_proxy.h"
 #include <KisMainWindow.h>
 
 #include <QDir>
@@ -22,7 +22,27 @@
 
 namespace
 {
-const QStringList blacklistedTools = { "KritaTransform/KisToolMove", "KisToolTransform", "KritaShape/KisToolLine" };
+const QStringList forceBlacklistedTools = {
+    "KisToolTransform",
+    "KisToolPolyline",
+    "KisToolPolygon",
+    "KisToolSelectOutline",
+    "KisToolSelectPolygonal",
+    "KisToolEncloseAndFill",
+    "KisToolPath",
+    "KisToolCrop",
+    "KisToolSelectPath",
+    "KisToolSelectMagnetic",
+}; // disable recorder when toggled to one of these tools.
+const QStringList activateBlacklistedTools = {
+    "KritaTransform/KisToolMove",
+    "KritaShape/KisToolLine",
+    "KritaShape/KisToolRectangle",
+    "KritaShape/KisToolEllipse",
+    "KisToolSelectRectangular",
+    "KisToolSelectElliptical",
+}; // disable recorder when toggled to one of these tools and activated tool(left button pressed on canvas).
+
 const double lowPerformanceWarningThreshold = 1.25;
 const int lowPerformanceWarningMax = 3;
 }
@@ -44,7 +64,10 @@ public:
     int lowPerformanceWarningCount = 0;
     volatile bool enabled = false;  // enable recording only for active documents
     volatile bool imageModified = false;
-    volatile bool skipCapturing = false; // set true on move or transform enabled to prevent tool deactivation
+    volatile bool isForceBlackTool = false;
+    volatile bool isActivateBlackTool = false;
+    volatile bool toolActivated = false;
+
 
     const KoColorSpace *targetCs =
         KoColorSpaceRegistry::instance()->colorSpace(RGBAColorModelID.id(),
@@ -227,6 +250,14 @@ public:
         return result;
     }
 
+    bool canStartCapture() // skip capture when use some tools.
+    {
+        if (isForceBlackTool)
+            return false;
+        if (isActivateBlackTool && toolActivated)
+            return false;
+        return true;
+    }
 };
 
 RecorderWriter::RecorderWriter()
@@ -243,15 +274,25 @@ RecorderWriter::~RecorderWriter()
 void RecorderWriter::setCanvas(QPointer<KisCanvas2> canvas)
 {
     if (d->canvas) {
-        disconnect(d->canvas->toolProxy(), SIGNAL(toolChanged(QString)), this, SLOT(onToolChanged(QString)));
+        KoToolProxy *proxy = d->canvas->toolProxy();
+        KisToolProxy *kritaProxy = dynamic_cast<KisToolProxy*>(proxy);
+
+        disconnect(proxy, SIGNAL(toolChanged(QString)), this, SLOT(onToolChanged(QString)));
+        disconnect(kritaProxy, SIGNAL(toolPrimaryActionActivated(bool)), this, SLOT(onToolPrimaryActionActivated(bool)));
         disconnect(d->canvas->image(), SIGNAL(sigImageUpdated(QRect)), this, SLOT(onImageModified()));
     }
 
     d->canvas = canvas;
 
     if (d->canvas) {
-        connect(d->canvas->toolProxy(), SIGNAL(toolChanged(QString)), this, SLOT(onToolChanged(QString)),
+
+        KoToolProxy *proxy = d->canvas->toolProxy();
+        KisToolProxy *kritaProxy = dynamic_cast<KisToolProxy*>(proxy);
+
+        connect(proxy, SIGNAL(toolChanged(QString)), this, SLOT(onToolChanged(QString)),
                 Qt::DirectConnection); // need to handle it even if our event loop is not running
+        connect(kritaProxy, SIGNAL(toolPrimaryActionActivated(bool)), this, SLOT(onToolPrimaryActionActivated(bool)),
+                Qt::DirectConnection);
         connect(d->canvas->image(), SIGNAL(sigImageUpdated(QRect)), this, SLOT(onImageModified()),
                 Qt::DirectConnection); // because it spams
     }
@@ -317,7 +358,7 @@ void RecorderWriter::timerEvent(QTimerEvent */*event*/)
 
     d->imageModified = false;
 
-    if (d->skipCapturing)
+    if (!d->canStartCapture())
         return;
 
     QElapsedTimer elapsedTimer;
@@ -352,7 +393,7 @@ void RecorderWriter::timerEvent(QTimerEvent */*event*/)
 
 void RecorderWriter::onImageModified()
 {
-    if (d->skipCapturing || !d->enabled)
+    if (!d->enabled || !d->canStartCapture())
         return;
 
     if ((!d->settings.recordIsolateLayerMode) &&
@@ -366,7 +407,13 @@ void RecorderWriter::onImageModified()
 
 void RecorderWriter::onToolChanged(const QString &toolId)
 {
-    d->skipCapturing = blacklistedTools.contains(toolId);
+    d->isForceBlackTool = forceBlacklistedTools.contains(toolId);
+    d->isActivateBlackTool = activateBlacklistedTools.contains(toolId);
+}
+
+void RecorderWriter::onToolPrimaryActionActivated(bool activated)
+{
+    d->toolActivated = activated;
 }
 
 void RecorderWriter::run()
